--- a/web-collect-url-param.html
+++ b/web-collect-url-param.html
@@ -21,7 +21,7 @@
 
             }]);
 
-            console.log("subscriber key: ", subKey.get("subkey")) //output get subscriber key value as a url parameter: ?subkey=123
+            console.log("subscriber key: ", subKey.get("subkey")) //output get subscriber key value as a url parameter: ?subkey=123 or ?subkey=%%_subscriberkey%%
 
             _etmc.push(["trackPageView"]);
 
