Saving values to hidden input fields

--- a/javascript_get_url_params_form.html
+++ b/javascript_get_url_params_form.html
@@ -24,7 +24,8 @@
             var utm_content = searchParams.get('utm_content')
 
             console.log(utm_source, utm_medium, utm_campaign, utm_term, utm_content)
-
+            
+            //Saving Values to hidden input fields
             document.getElementById("utm_source").value = utm_source
             document.getElementById("utm_medium").value = utm_medium
             document.getElementById("utm_campaign").value = utm_campaign
