--- a/javascript_get_url_params_form.html
+++ b/javascript_get_url_params_form.html
@@ -13,27 +13,29 @@
             //Append this test UTM/GA parameters to your current browsers URL: ?utm_source=CampaignSourceValue&utm_medium=CampaignMediumValue&utm_campaign=CampaignNameValue&utm_term=CampaignTermValue&utm_content=CampaignContentValue
 
             //Example: https://www.google.com/?utm_source=CampaignSourceValue&utm_medium=CampaignMediumValue&utm_campaign=CampaignNameValue&utm_term=CampaignTermValue&utm_content=CampaignContentValue            
-            
+
             //Get URL and create new instance of URLSearchParams
             var paramsString = window.location.search;
             var searchParams = new URLSearchParams(paramsString);
 
             //Store UTM parameters
-            var utm_source = searchParams.get('utm_source')
-            var utm_medium = searchParams.get('utm_medium')
-            var utm_campaign = searchParams.get('utm_campaign')
-            var utm_term = searchParams.get('utm_term')
-            var utm_content = searchParams.get('utm_content')
+            var utm_source = searchParams.get('utm_source');
+            var utm_medium = searchParams.get('utm_medium');
+            var utm_campaign = searchParams.get('utm_campaign');
+            var utm_term = searchParams.get('utm_term');
+            var utm_content = searchParams.get('utm_content');
 
-            console.log(utm_source, utm_medium, utm_campaign, utm_term, utm_content)
-            
-            //Saving values to hidden input fields
-            document.getElementById("utm_source").value = utm_source
-            document.getElementById("utm_medium").value = utm_medium
-            document.getElementById("utm_campaign").value = utm_campaign
-            document.getElementById("utm_term").value = utm_term
-            document.getElementById("utm_content").value = utm_content
+            //output values for testing
+            console.log(utm_source, utm_medium, utm_campaign, utm_term, utm_content, searchParams)
 
+            //Saving values to hidden input fields if not null
+            if (utm_source || utm_medium || utm_campaign || utm_term || utm_content !== null) {
+                document.getElementById("utm_source").value = utm_source
+                document.getElementById("utm_medium").value = utm_medium
+                document.getElementById("utm_campaign").value = utm_campaign
+                document.getElementById("utm_term").value = utm_term
+                document.getElementById("utm_content").value = utm_content
+            }
         });
     </script>
 </head>
@@ -51,6 +53,4 @@
         <label>utm_content</label>
         <input type="hidden" id="utm_content">
     </form>
-</body>
-
-</html>
+</body></html>
