removed trailing span tag

--- a/CloudPage_reCaptcha/recaptcha_form.html
+++ b/CloudPage_reCaptcha/recaptcha_form.html
@@ -40,7 +40,7 @@ set @siteKey = 'reCaptch_Site_Key'
         <input type="text" name="lastname"><br>
         <br>
 
-        <button>Submit</button></span>
+        <button>Submit</button>
     </form>
 </body>
 
