--- a/html/login-template.html
+++ b/html/login-template.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico" />
+    <!-- <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico" /> -->
 
     <title>Signin Template for Bootstrap</title>
 
@@ -21,7 +21,7 @@
       rel="stylesheet"/>
 
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet" />
+    <!-- <link href="signin.css" rel="stylesheet" /> -->
     <style>
       html,
       body {
@@ -112,5 +112,7 @@
       </button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
 </html>
