saving secure login template

--- a/Javascript/secure_login_template.html
+++ b/Javascript/secure_login_template.html
@@ -13,7 +13,7 @@ try {
     var formLogin = Platform.Request.GetFormField("formLogin")
 
     //var formPassword = "123"; //testing
-    //var formLogin = "gkhofri"; //testing
+    //var formLogin = "userName"; //testing
 
     var dataRows = Platform.Function.LookupRows('Dashboard_Logins','Password',formPassword);
     
