--- a/Javascript/secure_login_template.html
+++ b/Javascript/secure_login_template.html
@@ -1,3 +1,5 @@
+<!--Create data extension with two fields: Login and Password. Name it Dashboard_Logins-->
+
 <script runat="server">
     Platform.Load("core", "1.1");
 
