small edits/housekeeping

--- a/Javascript/secure_login_template.html
+++ b/Javascript/secure_login_template.html
@@ -136,7 +136,8 @@ try {
   </head>
 
   <body class="text-center">
-    <form class="form-signin" action="https://pub.s7.exacttarget.com/1zcxe3uv5sk" method="post">
+    <!--add form action url to protected content below -->
+    <form class="form-signin" action="#" method="post">
       <img
         class="mb-4"
         src="https://image.s7.sfmc-content.com/lib/fe93137275620c7974/m/2/ee320373-6608-42aa-b5dc-62f48282474c.png"
