--- a/html/disalow-email-domains-form.html
+++ b/html/disalow-email-domains-form.html
@@ -14,7 +14,7 @@
         
 <script>
 
-var rejectList = ["google.com", "yahoo.com"];
+var rejectList = ["google.com", "yahoo.com"]; //add email domains here
 
 function validateEmailField() {
     var emailValue = document.getElementById('email').value // To Get Value (can use getElementById)
