--- a/Javascript/Self_Service_Preference_Center/self_service_preference_center_front_end.html
+++ b/Javascript/Self_Service_Preference_Center/self_service_preference_center_front_end.html
@@ -18,6 +18,37 @@ Set @subKey = "gabe.khofri@slalom.com"
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+        .custom-switch.custom-switch-md .custom-control-label {
+            padding-left: 2rem;
+            padding-bottom: 1.5rem;
+        }
+
+        .custom-switch.custom-switch-md .custom-control-label::before {
+            height: 1.5rem;
+            width: calc(2rem + 0.75rem);
+            border-radius: 3rem;
+        }
+
+        .custom-switch.custom-switch-md .custom-control-label::after {
+            width: calc(1.5rem - 4px);
+            height: calc(1.5rem - 4px);
+            border-radius: calc(2rem - (1.5rem / 2));
+        }
+
+        .custom-switch.custom-switch-md .custom-control-input:checked~.custom-control-label::after {
+            transform: translateX(calc(1.5rem - 0.25rem));
+        }
+
+        .description {
+            margin-left: 70px;
+            margin-top: -24px;
+        }
+
+        label.custom-control-label {
+            font-size: 21px;
+        }
+    </style>
 </head>
 
 <body>
@@ -65,7 +96,7 @@ Set @subKey = "gabe.khofri@slalom.com"
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-3">Self Service Preference Center</h1>
+                <h1 class="display-3">Custom Preference Center</h1>
                 <p>Example of a Marketing Cloud Custom Preference Center pulling preference categories and
                     descriptions from a data extension.</p>
                 <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
@@ -73,87 +104,109 @@ Set @subKey = "gabe.khofri@slalom.com"
         </div>
 
         <div class="container">
-
             <div class="row">
-                <h4>Email Address: </h4> <p style="padding-left:20px">%%=v(@subKey)=%%</p>
-                <form action="%%=RequestParameter('PAGEURL')=%%" method="post">
+                <div class="col-md-12">
+                    <h4>Email Address: </h4> <span>%%=v(@subKey)=%%</span><br><br>
+                    <h4>Subscription Status: </h4> <span id="subscriptionStatus"></span><br><br>
+                    <form action="%%=RequestParameter('PAGEURL')=%%" method="post">
 
-                    <script runat="server">
-                        Platform.Load("core", "1.1");
-                        //check if contact has alread been added to selections preference center. if not then create new record
-                        var subKey = Variable.GetValue("@subKey");
-                        var PC_Selections = DataExtension.Init("PC_Selections");
+                        <script runat="server">
+                            Platform.Load("core", "1.1");
 
-                        try {
-                            var filter = { Property: "subKey", SimpleOperator: "equals", Value: subKey };
-                            var PC_SelectionsData = PC_Selections.Rows.Retrieve(filter);
-
-                            if (PC_SelectionsData.length == 0) {
-                                PC_Selections.Rows.Add({ subKey: subKey });
-
-                            }
-
-                            Variable.SetValue("newRecord", "new record was added sucessfully");
-
-                        } catch (err) {
-                            Variable.SetValue("newRecord", "new record failed" + err);
-                        }
-                        try {
-                            //build categories and descriptions html
-                            var PC_Categories = DataExtension.Init("PC_Categories");
-                            var PC_CategoriesRows = PC_Categories.Rows.Retrieve();
-                            //get contact selections
+                            var subKey = Variable.GetValue("@subKey");
                             var PC_Selections = DataExtension.Init("PC_Selections");
-                            var filter = { Property: "subKey", SimpleOperator: "equals", Value: subKey };
-                            var PC_SelectionsData = PC_Selections.Rows.Retrieve(filter);
 
-                            if (PC_CategoriesRows.length > 0) {
-                                for (var i in PC_CategoriesRows) {
+                            //check if contact has alread been added to selections preference center. if not then create new record
+                            try {
+                                var filter = { Property: "subKey", SimpleOperator: "equals", Value: subKey };
+                                var PC_SelectionsData = PC_Selections.Rows.Retrieve(filter);
 
-                                    Write('<div class="custom-control custom-switch"><input type="checkbox" class="custom-control-input" id="' + PC_CategoriesRows[i]["id"] + '">');
-                                    Write('<label class="custom-control-label" for="' + PC_CategoriesRows[i]["id"] + '">' + PC_CategoriesRows[i]["category"] + '</label></div>');
-                                    Write('<div><p>' + PC_CategoriesRows[i]["description"] + '</p></div>');
+                                if (PC_SelectionsData.length == 0) {
+                                    PC_Selections.Rows.Add({ subKey: subKey });
 
-                                    if (PC_SelectionsData.length > 0) {
-                                        for (var j in PC_SelectionsData) {
-                                            var sales = PC_SelectionsData[j]["Sales"];
-                                            var events = PC_SelectionsData[j]["Events"];
-                                            var CommunityOutReach = PC_SelectionsData[j]["CommunityOutReach"];
-                                            var NewProducts = PC_SelectionsData[j]["NewProducts"];
-                                            var status = PC_SelectionsData[j]["status"];
-
-                                        }
-                                    }
+                                    Variable.SetValue("newRecord", "new record was added sucessfully");
+                                } else {
 
                                 }
+
+                                if (Request.Method == "POST") {
+
+                                    var Sales = Platform.Request.GetFormField('Sales');
+                                    var Events = Platform.Request.GetFormField('Events');
+                                    var CommunityOutReach = Platform.Request.GetFormField('CommunityOutReach');
+                                    var NewProducts = Platform.Request.GetFormField('NewProducts');
+
+                                    var PC_SelectionsDE = DataExtension.Init("PC_Selections");
+
+                                    var payload = {
+                                        Sales: Sales,
+                                        Events: Events,
+                                        CommunityOutReach: CommunityOutReach,
+                                        NewProducts: NewProducts
+                                    };
+
+                                    var updatedRowCount = PC_SelectionsDE.Rows.Update(
+                                        payload,
+                                        ['subKey'], [subKey]
+                                    );
+                                    // Write("Rows updated: " + Stringify(updatedRowCount));
+                                } else {
+
+                                }
+
+                                Variable.SetValue("newRecord", "Update added sucessfully");
+
+                            } catch (err) {
+                                Variable.SetValue("newRecord", "new record or update record failed " + err);
                             }
+                            try {
+                                //build categories and descriptions html
+                                var PC_Categories = DataExtension.Init("PC_Categories");
+                                var PC_CategoriesRows = PC_Categories.Rows.Retrieve();
 
-                            Variable.SetValue("sales", sales);
-                            Variable.SetValue("events", events);
-                            Variable.SetValue("CommunityOutReach", CommunityOutReach);
-                            Variable.SetValue("NewProducts", NewProducts);
-                            Variable.SetValue("subKey", subKey);
-                            Variable.SetValue("status", status);
+                                //get contact selections
+                                var PC_Selections = DataExtension.Init("PC_Selections");
+                                var filter = { Property: "subKey", SimpleOperator: "equals", Value: subKey };
+                                var PC_SelectionsData = PC_Selections.Rows.Retrieve(filter);
 
-                            Variable.SetValue("html", " retrieved selections html sucessfully");
+                                if (PC_CategoriesRows.length > 0) {
+                                    for (var i in PC_CategoriesRows) {
 
-                        } catch (err) {
-                            Variable.SetValue("html", "retrieved selections failed." + err);
-                        }
-                    </script>
-                    <!-- <div class="custom-control custom-switch"><input type="checkbox" class="custom-control-input" id="" name="">
-                        <label class="custom-control-label" for=""></label></div>
-                        <div><p></p></div> -->
-                    <input id="submitted" type="hidden" name="submitted" value="submitted" />
+                                        Write('<div class="custom-control custom-switch custom-switch-md"><input type="checkbox" class="custom-control-input category" id="' + PC_CategoriesRows[i]["id"] + '"name="' + PC_CategoriesRows[i]["id"] + '">');
+                                        Write('<label class="custom-control-label" for="' + PC_CategoriesRows[i]["id"] + '">' + PC_CategoriesRows[i]["category"] + '</label></div>');
+                                        Write('<div><p class="description">' + PC_CategoriesRows[i]["description"] + '</p></div>');
 
-                    <input class="btn btn-primary" type="submit" value="Submit">
-                </form>
+                                        if (PC_SelectionsData.length > 0) {
+                                            for (var j in PC_SelectionsData) {
+                                                var sales = PC_SelectionsData[j]["Sales"];
+                                                var events = PC_SelectionsData[j]["Events"];
+                                                var CommunityOutReach = PC_SelectionsData[j]["CommunityOutReach"];
+                                                var NewProducts = PC_SelectionsData[j]["NewProducts"];
+                                                var status = PC_SelectionsData[j]["status"];
 
+                                            }
+                                        }
+                                    }
+                                }
+
+                                Variable.SetValue("sales", sales);
+                                Variable.SetValue("events", events);
+                                Variable.SetValue("CommunityOutReach", CommunityOutReach);
+                                Variable.SetValue("NewProducts", NewProducts);
+                                Variable.SetValue("subKey", subKey);
+                                Variable.SetValue("status", status.toUpperCase());
+
+                                Variable.SetValue("html", " retrieved selections html sucessfully");
+
+                            } catch (err) {
+                                Variable.SetValue("html", "retrieved selections failed." + err);
+                            }
+                        </script>
+                        <input class="btn btn-primary" type="submit" value="Submit" id="submit">
+                    </form>
+                </div>
             </div>
-        </div>
-
-        <hr>
-
+            <hr>
         </div> <!-- /container -->
 
     </main>
@@ -192,35 +245,52 @@ Set @subKey = "gabe.khofri@slalom.com"
     <script>
         // A $( document ).ready() block.
         $(document).ready(function () {
-            console.log("5150");
+            console.log("Dev Version: 5150");
             console.log('jquery: ', pcSelections)
             // $(".custom-control-input").attr("id", pcSelections.categoryID);
             // $(".custom-control-input").attr("for", pcSelections.categoryID);
+            $("#subscriptionStatus").append(pcSelections.status);
+
+            $('input[type=checkbox]').change(function () {
+                if ($(this).prop("checked")) {
+                    this.value = "True"
+                    // alert('${this.value} is checked');
+                }
+                else {
+                    this.value = "False"
+                    // alert('${this.value} is unchecked');
+                }
+            });
 
             if (pcSelections.sales == "True") {
-                $("#Sales").prop('checked', true);
+                $("#Sales").prop('checked', true).val("True");
             }
-            if (pcSelections.sales == "false") {
-                $("#Sales").prop('checked', false);
+            if (pcSelections.sales == "False") {
+                $("#Sales").prop('checked', false).val("False");;
             }
             if (pcSelections.events == "True") {
-                $("#Events").prop('checked', true);
+                $("#Events").prop('checked', true).val("True");;
             }
-            if (pcSelections.events == "false") {
-                $("#Events").prop('checked', false);
+            if (pcSelections.events == "False") {
+                $("#Events").prop('checked', false).val("False");;
             }
             if (pcSelections.CommunityOutReach == "True") {
-                $("#CommunityOutReach").prop('checked', true);
+                $("#CommunityOutReach").prop('checked', true).val("True");;
             }
-            if (pcSelections.CommunityOutReach == "false") {
-                $("#CommunityOutReach").prop('checked', false);
+            if (pcSelections.CommunityOutReach == "False") {
+                $("#CommunityOutReach").prop('checked', false).val("False");;
             }
             if (pcSelections.NewProducts == "True") {
-                $("#NewProducts").prop('checked', true);
+                $("#NewProducts").prop('checked', true).val("True");;
             }
-            if (pcSelections.NewProducts == "false") {
-                $("#NewProducts").prop('checked', false);
+            if (pcSelections.NewProducts == "False") {
+                $("#NewProducts").prop('checked', false).val("False");;
             }
+
+            $("#submit").click(function () {
+                // alert("The paragraph was clicked.");
+            });
+
         });
     </script>
 </body>
